fix bug create perso

--- a/app/src/main/res/layout/activity_create_perso.xml
+++ b/app/src/main/res/layout/activity_create_perso.xml
@@ -31,21 +31,6 @@
         </android.support.design.widget.TextInputLayout>
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/loading"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#B4000000"
-        android:clickable="true"
-        android:gravity="center">
-
-        <ProgressBar
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:indeterminate="true" />
-    </LinearLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -121,12 +106,25 @@
         android:layout_height="match_parent"
         android:layout_marginTop="390dp">
         <Button
+            android:id="@+id/btCreate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Create it"/>
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/loading"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#B4000000"
+        android:clickable="true"
+        android:gravity="center">
 
-
+        <ProgressBar
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:indeterminate="true" />
+    </LinearLayout>
 
 </RelativeLayout>
