--- a/app/src/main/res/layout/activity_perso.xml
+++ b/app/src/main/res/layout/activity_perso.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/title_create_perso"
+        android:id="@+id/title_info_perso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="26sp"
