--- a/app/src/main/res/layout/activity_perso.xml
+++ b/app/src/main/res/layout/activity_perso.xml
@@ -62,4 +62,19 @@
             android:text="Race"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp">
+
+        <Button
+            android:id="@+id/play"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Play"></Button>
+    </LinearLayout>
+
+
+
 </LinearLayout>
