--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -68,17 +68,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal">
-    
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:text="Action1"
-            android:gravity="center_horizontal"/>
 
+        <Button
+            android:id="@+id/action1"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:gravity="center_horizontal"
+            android:text="Action1" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
 
+        <Button
+            android:id="@+id/action2"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:gravity="center_horizontal"
+            android:text="Action2" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal">
 
+        <Button
+            android:id="@+id/action3"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:gravity="center_horizontal"
+            android:text="Action3" />
+    </LinearLayout>
 </LinearLayout>
