--- a/app/src/main/res/layout/activity_perso.xml
+++ b/app/src/main/res/layout/activity_perso.xml
@@ -73,7 +73,14 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="Play"></Button>
+        <Button
+            android:id="@+id/update"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Update Perso"></Button>
     </LinearLayout>
+
+
 
 
 
