[UPDATE&ADD] some designs

--- a/app/src/main/res/layout/activity_update_perso.xml
+++ b/app/src/main/res/layout/activity_update_perso.xml
@@ -109,6 +109,7 @@
             android:id="@+id/btUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:theme="@style/DirectionStyle"
             android:text="Update it"/>
     </RelativeLayout>
 
