--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,30 @@
     android:focusableInTouchMode="true">
 
 
-    <Button
-        android:id="@+id/inscription"
-        android:layout_width="225dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="0dp"
-        android:text="Inscription"
-        android:layout_alignParentTop="true"
-         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/connexion"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:text="Connexion"
-        android:layout_toEndOf="@+id/inscription"/>
+        <Button
+            android:id="@+id/inscription"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="0dp"
+            android:text="Inscription"
+            android:layout_alignParentTop="true"
+            android:theme="@style/DirectionStyle"/>
 
+        <Button
+            android:id="@+id/connexion"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="0dp"
+            android:text="Connexion"
+            android:theme="@style/DirectionStyle"
+            android:layout_toEndOf="@+id/inscription"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -32,20 +38,16 @@
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:paddingTop="10dp"
+        android:paddingTop="40dp"
         android:layout_marginTop="60dp"
         android:id="@+id/linearLayout">
-
-
         <include
             android:id="@+id/includesignup"
-            layout="@layout/include_signup"
-             />
+            layout="@layout/include_signup" />
 
         <include layout="@layout/include_login"
             android:visibility="invisible"
             android:id="@+id/includelogin"/>
-
     </LinearLayout>
 
     <LinearLayout
@@ -62,7 +64,4 @@
             android:layout_height="50dp"
             android:indeterminate="true" />
     </LinearLayout>
-
-
-
 </RelativeLayout>
