--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -38,16 +38,14 @@
         android:id="@+id/update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:background="#00ffae"
+        android:theme="@style/DirectionStyle"
         android:text="Update Profile" />
 
     <Button
         android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:background="#FFA000"
+        android:theme="@style/RedActionStyle"
         android:text="LogOut" />
 
 </LinearLayout>
