--- a/app/src/main/res/layout/include_login.xml
+++ b/app/src/main/res/layout/include_login.xml
@@ -8,6 +8,7 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/lLoginEmail"
         android:layout_width="match_parent"
+        android:theme="@style/InputStyle"
         android:layout_height="wrap_content">
 
         <EditText
@@ -22,6 +23,7 @@
         android:id="@+id/lLoginPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/InputStyle"
         android:layout_below="@id/lLoginEmail"
         app:passwordToggleEnabled="true">
 
@@ -38,6 +40,11 @@
         android:id="@+id/btLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/SubmitStyle"
         android:layout_below="@+id/lLoginPassword"
         android:text="Login" />
+
+
 </RelativeLayout>
+
+
