--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,63 +6,69 @@
     android:focusableInTouchMode="true">
 
 
-    <Button
-        android:id="@+id/inscription"
-        android:layout_width="225dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="0dp"
-        android:text="Inscription"
-        android:layout_alignParentTop="true"
-         />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/connexion"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:text="Connexion"
-        android:layout_toEndOf="@+id/inscription"/>
+        <Button
+            android:id="@+id/inscription"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="0dp"
+            android:text="Inscription"
+            android:theme="@style/DirectionStyle" />
+
+        <Button
+            android:id="@+id/connexion"
+            android:layout_width="170dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="0dp"
+            android:layout_toEndOf="@+id/inscription"
+            android:text="Connexion"
+            android:theme="@style/DirectionStyle" />
+    </RelativeLayout>
 
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:orientation="vertical"
         android:paddingBottom="10dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:paddingTop="10dp"
-        android:layout_marginTop="60dp"
-        android:id="@+id/linearLayout">
+        android:paddingTop="40dp">
 
 
         <include
             android:id="@+id/includesignup"
-            layout="@layout/include_signup"
-             />
+            layout="@layout/include_signup" />
 
-        <include layout="@layout/include_login"
-            android:visibility="invisible"
-            android:id="@+id/includelogin"/>
+        <include
+            android:id="@+id/includelogin"
+            layout="@layout/include_login"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/loading"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#B4000000"
         android:clickable="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="gone">
 
         <ProgressBar
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:indeterminate="true" />
     </LinearLayout>
-
 
 
 </RelativeLayout>
