--- a/app/src/main/res/layout/include_login.xml
+++ b/app/src/main/res/layout/include_login.xml
@@ -7,6 +7,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/lLoginEmail"
+        android:theme="@style/InputStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -20,6 +21,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/lLoginPassword"
+        android:theme="@style/InputStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/lLoginEmail"
@@ -36,6 +38,7 @@
 
     <Button
         android:id="@+id/btLogin"
+        android:theme="@style/SubmitStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/lLoginPassword"
