--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        aandroid:theme="@style/DirectionStyle"
+        android:theme="@style/DirectionStyle"
         android:text="Update Profile" />
 
     <Button
