--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/hp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="26sp"
+        android:layout_marginTop="30dp"
+        android:layout_alignParentTop="true"
+        android:gravity="center_horizontal"
+        android:text="HP"/>
+
+    <TextView
         android:id="@+id/eventtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
